[package]
name = "bitcask-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = 'basic_operations'
path = 'examples/basic_operations.rs'


[dependencies]
parking_lot = "0.12.2"
log = "0.4.21"
env_logger = "0.11.3"
thiserror = "1.0.59"
bytes = "1.6.0"
prost = "0.12.6"
crc32fast = "1.4.2"
crossbeam-skiplist = "0.1.3"
jammdb = "0.11.0"
